--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   </head>
   <body>
     <main>
+      <div class="finalBoard">
+        <div class="inputForm">
+          <div><span>Your final score: </span> <span id="finalscore"></span></div>
+          <p>Add your name to the leaderboard to save the score!</p>
+          <label for="fname">name:</label>
+          <input type="text" id="fname" name="fname">
+          <button id="submit">submit</button>
+        </div>
+
+        <div class="leaderboard">
+
+        </div>
+      </div>
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="leaderboard.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
